# string

./: .eslintrc.json  .gitignore  .gitmodules  .lintstagedrc.json  Cargo.toml  LICENSE-MIT  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.husky/: pre-commit
apps/: README.md
apps/desktop/: .eslintrc.json  index.html  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: globals.css  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: crypto.rs  main.rs  protocol.rs  user_data.rs  user_session.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx  page_test.tsx
apps/desktop/src/app/chat/: chat.css  page.tsx
apps/desktop/src/app/chat/components/chatLog/: log-entry.tsx
apps/desktop/src/app/components/chat/: chat-button.tsx  index.tsx
apps/desktop/src/app/components/existingChat/: existing-chat-button.tsx  index.tsx
apps/desktop/src/app/components/navbar/: index.tsx  login-button.tsx  logo.tsx  settings-button.tsx
apps/desktop/src/app/components/newChat/: chat-button.tsx  index.tsx  new-chat-button.tsx
apps/desktop/src/app/newChat/: page.tsx
apps/desktop/src/app/settings/: page.tsx
apps/desktop/src/app/signIn/: page.tsx
apps/desktop/src/app/signUp/: index.tsx  page.tsx
apps/desktop/src/app/test_pages/: page_test.tsx
apps/desktop/src/components/chatButton/: index.tsx
apps/desktop/src/components/chatLog/: index.tsx
apps/desktop/src/components/chatSidebar/: index.tsx
apps/desktop/src/components/chatlog/: chat.css  index.tsx
apps/desktop/src/components/circularButton/: index.tsx
apps/desktop/src/components/circularChatButton/: index.tsx  tooltip.tsx
apps/desktop/src/components/contexts/: loginContext.tsx
apps/desktop/src/components/existingChat/: index.tsx
apps/desktop/src/components/navbar/: index.tsx  logo.tsx  settings-button.tsx  sign-in-button.tsx  sign-in.tsx
apps/desktop/src/components/signUp/: index.tsx
apps/desktop/src/integration/: .gitignore  bindings.ts  bindings.tsx  index.ts  index.tsx
apps/example-web/: package.json  tsconfig.json
apps/example-web/src/app/: layout.tsx  page.tsx
crates/cache-prisma/: Cargo.toml
crates/cache-prisma/prisma/: schema.prisma
crates/cache-prisma/prisma/migrations/20240306161339_create_database/: migration.sql
crates/cache-prisma/src/: lib.rs
crates/comm/: Cargo.toml  README.md
crates/comm/src/: connection.rs  crypto.rs  error.rs  lib.rs  node.rs  packet.rs  peer.rs  socket.rs  util.rs
crates/comm/src/peer/: ack.rs  error.rs  inbound.rs  mod.rs  outbound.rs
crates/comm/src/socket/: error.rs  gossip.rs  mod.rs  packet.rs
crates/desktop-rspc/: Cargo.toml
crates/desktop-rspc/src/: account.rs  cache.rs  channel.rs  context.rs  event.rs  lib.rs  lighthouse.rs  message.rs  settings.rs  user.rs
crates/example-crate/: Cargo.toml
crates/lighthouse-client/: Cargo.toml
crates/lighthouse-client/src/: lib.rs
crates/lighthouse-prisma/: Cargo.toml  README.md
crates/lighthouse-prisma/prisma/: schema.prisma
crates/lighthouse-prisma/prisma/migrations/20240306162215_create_lighthouse_db/: migration.sql
crates/lighthouse-protocol/: Cargo.toml
crates/lighthouse-protocol/src/: lib.rs
crates/prisma/: Cargo.toml  schema.prisma
crates/prisma/src/: lib.rs
crates/prisma_orm/: Cargo.toml
crates/prisma_orm/prisma/: schema.prisma
crates/prisma_orm/src/: .gitignore  lib.rs  prisma.rs
crates/protocol/: Cargo.toml  README.md  build.rs
crates/protocol/proto/: buf.yaml
crates/protocol/proto/str/availablepeers/v1/: availablepeers.proto
crates/protocol/proto/str/channels/v1/: channels.proto
crates/protocol/proto/str/crypto/v1/: crypto.proto
crates/protocol/proto/str/gossip/v1/: gossip.proto
crates/protocol/proto/str/messages/v1/: messages.proto
crates/protocol/proto/str/network/v1/: network.proto
crates/protocol/proto/str/packet/v1/: packet.proto
crates/protocol/proto/str/peers/v1/: peers.proto
crates/protocol/proto/str/requestavailablepeers/v1/: requestavailablepeers.proto
crates/protocol/proto/str/sendavailablepeers/v1/: sendavailablepeers.proto
crates/protocol/proto/str/users/v1/: users.proto
crates/protocol/src/: lib.rs  users.proto
crates/protocol/string/messages/v1/: messages.proto
crates/protocol/string/users/v1/: users.proto
scripts/: generate-prisma.sh
services/: README.md
services/example-service/: README.md  package.json  tsconfig.json
services/example-service/src/: app.controller.spec.ts  main.ts
services/lighthouse/: Cargo.toml  tester.py
services/lighthouse/src/: main.rs
tools/: README.md
tools/comm-test/: .gitignore  Cargo.toml
tools/comm-test/src/: lighthouse.rs  main.rs
tools/prisma-cli/: Cargo.toml
