[package]
name = "comm"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }

byteorder = "1"
double-ratchet-rs = "0.4.6"
flate2 = "1"
hex = "0.4.3"
rand = "0.8.5"
tracing = "0.1"
x25519-dalek = "^2.0.0"

protocol = { path = "../protocol" }
