[package]
name = "string-comm"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }

byteorder = "1"
double-ratchet-rs = "0.4.6"
flate2 = "1"
hex = "0.4.3"
rand = "0.8.5"
tracing = "0.1"
x25519-dalek = "^2.0.0"
pgp = "0.11.0"
sha2 = "0.10.8"
nom = "7.1.3"
chrono = "0.4.34"
rsntp = "4.0.0"
prost-types = "0.12"
stunclient = "=0.4.0"

string-protocol = { path = "../protocol" }
