[package]
name = "lighthouse-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }

base64 = "0.22"
chrono = "0.4"
hex = "0.4"
pgp = "0.11"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
thiserror = "1"

string-comm = { path = "../comm" }
lighthouse-protocol = { path = "../lighthouse-protocol" }
