[package]
name = "lighthouse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = "0.7"
base64 = "0.21"
chrono = "0.4"
tower = { version = "0.4", features = [
	"util",
	"timeout",
	"load-shed",
	"limit",
] }
tower-http = { version = "0.5", features = [
	"add-extension",
	"auth",
	"compression-full",
	"trace",
] }

lighthouse-prisma = { path = "../../crates/lighthouse-prisma" }
