[package]
name = "lighthouse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = "0.7"
axum-macros = "0.4.1"
base64 = "0.21"
chrono = "0.4"
tower = { version = "0.4", features = [
	"util",
	"timeout",
	"load-shed",
	"limit",
] }
tower-http = { version = "0.5", features = [
	"add-extension",
	"auth",
	"compression-full",
	"trace",
] }
pgp = "0.11.0"
sha2 = "0.10.8"
nom = "7.1.3"
hex = "0.4.3"

lighthouse-prisma = { path = "../../crates/lighthouse-prisma" }
string-comm = { path = "../../crates/comm" }

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.11"
default-features = false
