[package]
name = "comm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

string-comm = { path = "../../crates/comm" }
string-protocol = { path = "../../crates/protocol" }

clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pgp = "0.11.0"
smallvec = "1.13.1"
hex = "0.4.3"
image = "0.24.9"
artem = "2.0.6"
sha2 = "0.10.8"

chrono = "0.4"
reqwest = { version = "0.11.24", features = ["json"] }
base64 = "0.22.0"
serde_json = "1.0"
openssl = { version = "0.10.64", features = ["vendored"] }
