[package]
name = "string-app"
version = "0.1.0"
description = "Native application for demonstrating the String protocol."
authors = [
	"Amaan Hamza",
	"Sam Forbes",
	"David Murray",
	"Skye Elliot",
	"Heidar Anwari",
	"Yichen Chai",
]
license = "GNU AGPLv3"
repository = "https://github.com/cst1b-string/string"
default-run = "string-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }


[dependencies]
serde = { workspace = true }
tokio = { workspace = true }

rspc = { version = "0.1", features = ["tauri"] }
serde_json = "1.0"
tauri = { version = "1.5.4", features = [] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

string-comm = { path = "../../../crates/comm" }
cache-prisma = { path = "../../../crates/cache-prisma" }
desktop-rspc = { path = "../../../crates/desktop-rspc" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
